--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "deploy": "docusaurus deploy"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.64",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.64",
-    "classnames": "^2.2.6",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "@docusaurus/core": "latest",
+    "@docusaurus/preset-classic": "latest",
+    "classnames": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "browserslist": {
     "production": [
